compiler/testData/diagnostics/tests/duplicateJvmSignature/erasure/collections.kt
// !DIAGNOSTICS: -UNUSED_PARAMETER

<!CONFLICTING_PLATFORM_DECLARATIONS!>fun foo(s: List<String>)<!> {}
<!CONFLICTING_PLATFORM_DECLARATIONS!>fun foo(s: MutableList<String>)<!> {}